feat: Initial project setup with Task entity, repository, DTOs and service
- Configure Spring Boot with PostgreSQL and Lombok
- Create Task entity with JPA annotations
- Add TaskRepository with custom queries for due tasks
- Create DTOs: CreateTaskRequest, UpdateTaskRequest, TaskResponse
- Implement TaskService with CRUD operations
- Add pause/resume task functionality
- Configure application.properties for database connection
- Update .gitignore to exclude IDE and build files

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,69 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# virtual machine crash logs
 hs_err_pid*
 replay_pid*
+
+### Spring Boot ###
+HELP.md
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+### STS (Spring Tool Suite) ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
+.idea/
+*.iws
+*.iml
+*.ipr
+out/
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### VS Code ###
+.vscode/
+
+### Mac OS ###
+.DS_Store
+.AppleDouble
+.LSOverride
+
+### Windows ###
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+### Linux ###
+*~
+
+### Application Specific ###
+application-local.properties
+application-local.yml
+application-prod.properties
+application-prod.yml
+
+### Database ###
+*.db
+*.sqlite
+
+### Logs ###
+logs/
+*.log.*
